# taskschd

./: .gitignore  Cargo.toml  README.md
demo/: main.rs
src/: action_collection.rs  com_macro.rs  exec_action.rs  lib.rs  main.rs  ole_utils.rs  principal.rs  registered_task.rs  registration_info.rs  repetition_pattern.rs  task_definition.rs  task_folder.rs  task_service.rs  task_settings.rs  taskschd.rs  trigger_boot.rs  trigger_daily.rs  trigger_event.rs  trigger_logon.rs  trigger_monthly.rs  trigger_time.rs  trigger_weekly.rs
tests/: main.rs
