[package]
name = "taskschd"
version = "0.1.0"
authors = ["ydhcui <ydhcui@qq.com>"]
license = "MPL-2.0"
edition = "2018"
description = "windows taskschd demo"
homepage = "https://github.com/ydhcui"
keywords = ["task","taskschd"]
repository = "https://github.com/ydhcui/taskschd.git"


[dependencies]
chrono = "0.4"
comedy = "0.1"
failure = "0.1"
percent-encoding = "2.1"
rust-ini = "0.10"
wio = "0.2"
xml-rs = "0.8"

log = { version = "0.4", features = ["std"] }
winapi = { version = "0.3.8", features = ["errhandlingapi", "minwindef", "ntdef", "oaidl", "oleauto", "sysinfoapi", "taskschd", "winbase", "winerror", "winnt", "winreg", "wtypes"] }
