[package]
name = "taskschd"
version = "0.1.1"
authors = ["ydhcui <ydhcui@qq.com>"]
license = "MPL-2.0"
edition = "2018"
description = "windows taskschd demo"
homepage = "https://github.com/ydhcui"
keywords = ["task","taskschd"]
repository = "https://github.com/ydhcui/taskschd.git"


[dependencies]
chrono = "0.4"
comedy = "0.2"
failure = "0.1"
winapi = { version = "0.3.8", features = ["errhandlingapi", "minwindef", "ntdef", "oaidl", "oleauto", "sysinfoapi", "taskschd", "winbase", "winerror", "winnt", "winreg", "wtypes"] }
